[package]
name = "cbqn"
description = "Embed BQN in Rust via CBQN FFI"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["CBQN", "BQN", "APL", "array"]
readme = "README.md"
homepage = "https://github.com/Detegr/cbqn-rs"
repository = "https://github.com/Detegr/cbqn-rs.git"
documentation = "https://detegr.github.io/cbqn-rs/cbqn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbqn-sys = { version = "0.2.0", default-features = false }
once_cell = "1.17.0"
parking_lot = "0.12.1"
wasmer = { version = "4.0.0", optional = true }
wasmer-wasix = { version = "0.9.0", optional = true }
thiserror = "1.0.40"

[features]
default = ["native-backend"]
native-backend = ["cbqn-sys/shared-object"]
wasi-backend = ["dep:wasmer", "dep:wasmer-wasix"]
